crates/oxc_react_compiler/tests/snapshots/async-foreach-parameter-safe.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-foreach-parameter-safe.js
---
function Component() {
	let count = 0;
	const callbacks = [_temp];
	callbacks.forEach(_temp2, () => count++);
	return null;
}
async function _temp2(cb) {
	await 0;
	cb();
}
function _temp() {
	return null;
}
