crates/oxc_react_compiler/tests/snapshots/async-function-call-own-override.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-function-call-own-override.js
---
function Component(t0) {
	let count = 0;
	const cb = () => count++;
	const run = async () => {
		await 0;
		cb();
	};
	run.call = _temp;
	run.call(null);
	return null;
}
function _temp() {
	return null;
}
