crates/oxc_react_compiler/tests/snapshots/async-generator-capture-overwritten.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-generator-capture-overwritten.js
---
function Component() {
	let count = 0;
	const cb = () => count++;
	let selected = cb;
	const run = async function* () {
		await 0;
		selected();
	};
	const iterator = run();
	selected = _temp;
	iterator.next();
	return null;
}
function _temp() {}
