crates/oxc_react_compiler/tests/snapshots/async-generator-direct-unconsumed.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-generator-direct-unconsumed.js
---
function Component() {
	let count = 0;
	const run = async function* () {
		await 0;
		count++;
	};
	run();
	return null;
}
