crates/oxc_react_compiler/tests/snapshots/async-generator-own-next.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-generator-own-next.js
---
function Component() {
	let count = 0;
	const cb = () => count++;
	const run = async function* () {
		await 0;
		cb();
	};
	const iterator = run();
	iterator.next = _temp;
	iterator.next();
	return null;
}
function _temp() {}
