crates/oxc_react_compiler/tests/snapshots/async-generator-unconsumed.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-generator-unconsumed.js
---
function Component() {
	let count = 0;
	const cb = () => count++;
	const run = async function* () {
		await 0;
		cb();
	};
	run();
	return null;
}
