crates/oxc_react_compiler/tests/snapshots/async-invoked-eager-only-later-store.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-invoked-eager-only-later-store.js
---
function Component() {
	let count = 0;
	let cb = _temp;
	const run = async () => {
		cb();
		await 0;
	};
	run();
	cb = () => count++;
	return null;
}
function _temp() {
	return null;
}
