crates/oxc_react_compiler/tests/snapshots/async-invoked-eager-snapshot-later-store.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-invoked-eager-snapshot-later-store.js
---
function Component() {
	let count = 0;
	let cb = _temp;
	const run = async () => {
		const saved = cb;
		await 0;
		saved();
	};
	run();
	cb = () => count++;
	return null;
}
function _temp() {
	return null;
}
