crates/oxc_react_compiler/tests/snapshots/async-invoked-nested-helper-overwrite.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-invoked-nested-helper-overwrite.js
---
function Component() {
	let count = 0;
	let cb = () => count++;
	const run = async () => {
		const invoke = () => cb();
		await 0;
		invoke();
	};
	run();
	cb = _temp;
	return null;
}
function _temp() {
	return null;
}
