crates/oxc_react_compiler/tests/snapshots/async-map-clear-foreach.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-map-clear-foreach.js
---
function Component() {
	let count = 0;
	const cb = () => count++;
	const callbacks = new Map([["key", cb]]);
	callbacks.clear();
	callbacks.forEach(_temp);
	return null;
}
async function _temp(value) {
	await 0;
	value();
}
